--- a/style.css
+++ b/style.css
@@ -45,3 +45,33 @@ main{
   height: 471px;
   width: 269px;
 }
+
+.redes-sociais{
+  text-align: right;
+  display: flex;
+  flex-direction: column ;
+  justify-content: space-around;
+  padding: 20px;
+  gap: 10px 15px;
+}
+
+.redes-sociais img{
+width: 50px;
+border-radius: 50%;
+box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.311);
+}
+
+
+.redes-sociais img:hover{
+  border: 2px solid white;
+  transform: translate(-5px, -5px);
+  transition: .5s, border .2s ;
+}
+
+
+/*
+
+section#redes-socias{
+       display:  flex;
+       flex-direction:  column;
+} para deixar e,m coluna*/
